# a-m-api

./: README.md  build.sh  manage.py  pyproject.toml  render.yaml  requirements.txt
apiauth/: apps.py  urls.py  views.py
apiauth/migrations/: 0001_initial.py  0002_delete_token.py
assetrequests/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
assetrequests/migrations/: 0001_initial.py  0002_alter_assetrequest_employee_id.py  0003_alter_assetrequest_status.py
assetrequests/templates/: email.html
assets/: admin.py  models.py  mypagination.py  permissions.py  serializers.py  urls.py  views.py
assets/migrations/: 0001_initial.py  0002_remove_asset_id_alter_asset_serial_number.py  0003_asset_image_url.py  0004_alter_asset_model.py  0005_asset_status_alter_asset_image_url.py  0006_alter_asset_status.py  0007_alter_asset_status.py  0008_alter_asset_status.py
assetsmanagement/: asgi.py  settings.py  urls.py  wsgi.py
branches/: admin.py  models.py  serializers.py  urls.py  views.py
branches/migrations/: 0001_initial.py
employees/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
employees/migrations/: 0001_initial.py
